--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@swimlane/ngx-datatable": "^17.0.0",
     "bootstrap": "^4.5.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.1",
@@ -57,5 +58,9 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+"config": {
+  "ionic_sass": "./config/sass.config.js",
+  "ionic_copy": "./config/copy.config.js"
+}
 }
